# Among-Us-AI

./: .gitignore  README.md  amongus_reader.py  chatGPT.py  example_data_service.py  getTaskLocations.py  in_meeting_test.py  info_pipe.py  info_pipe_old.py  is_imposter.py  is_impostor.py  is_meeting.py  last_area.txt  last_task.txt  locator.py  main.py  pyproject.toml  redis_credentials.json  solver.py  test.py  utility.py
amongus_reader/: __init__.py  amongus_reader_user_guide_ko.md
amongus_reader/cache/: manager.py
amongus_reader/core/: __init__.py  memory.py  offsets.py
amongus_reader/il2cpp/: __init__.py  meta.py
amongus_reader/readers/: __init__.py  hud.py  players.py  session.py  tasks.py
amongus_reader/service/: __init__.py  data_service.py  reader.py  task_lookup.py
amongus_reader/tools/: Graph_generator.py  check_player_death.py  move.py  move_to_coord.py  show_player_positions.py  task_location.py
amongus_reader_2.2/: amongus_reader_user_guide_ko.md  debug_session.py
amongus_reader_2.2/amongus_reader/: __init__.py
amongus_reader_2.2/amongus_reader/core/: __init__.py  memory.py  offsets.py  process_utils.py
amongus_reader_2.2/amongus_reader/il2cpp/: scan.py
amongus_reader_2.2/amongus_reader/readers/: __init__.py  players.py  session.py  tasks.py
amongus_reader_2.2/amongus_reader/service/: __init__.py  data_service.py  reader.py  task_lookup.py
amongus_reader_2.2/graphs/: LOBBY_G.pkl  SHIP_G.pkl
amongus_reader_2.2/tools/: Graph_gen_pygame.py  Graph_generator.py  graph_jungsanghwa.py  move.py  position_jungsanghwa.py  show_player_positions.py  task_location.py
amongus_reader_2.2/tools/graph_boundary/SHIP/20251107_064958/: G.pkl  meta.json
amongus_reader_2.2/tools/graph_boundary/SHIP/20251107_065203/: G.pkl  meta.json
amongus_reader_2.2/tools/graph_exported/: SHIP_G.pkl
amongus_reader_2.2/tools/graph_exported_old/: SHIP_G.pkl  SHIP_G_jungsanghwaed.pkl  SHIP_graph.pkl
amongus_reader_2.2/tools/graph_exported_old_old/: SHIP_G_jungsanghwaed.pkl
amongus_reader_2.2/tools/graph_reference/onlynodes/: G.pkl
amongus_reader_2.2/tools/graphs_generated/SHIP/20251107_072337/: G.pkl  meta.json
amongus_reader_2.2/tools/graphs_generated/SHIP/20251107_072359/: G.pkl  meta.json
amongus_reader_2.2/tools/graphs_generated/SHIP/20251107_074148/: G.pkl  meta.json
amongus_reader_2.2/tools/graphs_generated/SHIP/20251107_082935/: G.pkl
amongus_reader_2.2/tools/graphs_generated/SHIP/shifted_original/: G.pkl  meta.json
amongus_reader_2.2/tools/position_jungsanghwaed/: SHIP_TASK_TYPES.json
amongus_reader_3.0/: amongus_reader_user_guide_ko.md
graphs/: SHIP_G.pkl  SHIP_graph.pkl
task-solvers/: Calibrate Distributor.py  task_utility.py
task_solvers/: Activate Weather Nodes.py  Align Engine Output.py  Align Telescope.py  Calibrate Distributor.py  Chart Course.py  Clean O2 Filter.py  Clear Asteroids.py  Divert Power.py  Empty Chute.py  Empty Garbage.py  Fill Canisters.py  Fix Communications.py  Fix Lights.py  Fix Wiring.py  Fuel Engines.py  Insert Keys.py  Inspect Sample 2.py  Inspect Sample.py  Monitor Oxygen.py  Open Door.py  Open Waterways.py  Prime Shields.py  Reboot Wifi 2.py  Reboot Wifi.py  Record Temperature.py  Repair Drill.py  Replace Water Jug.py  Reset Reactor.py  Reset Seismic Stabilizers.py  Restore Oxygen.py  Sabotage.py  Scan Boarding Pass.py  Stabilize Steering.py  Start Reactor.py  Store Artifacts.py  Submit Scan.py  Swipe Card.py  Unlock Manifolds.py  Upload Data.py  Vent Cleaning.py  (+1 more)
utils/: kill.py  report.py  task_utility.py
