[project]
name = "task-solver-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py==1.3.0",
    "aiohttp==3.8.4",
    "aiosignal==1.3.1",
    "astroid==2.11.7",
    "asttokens==2.0.5",
    "astunparse==1.6.3",
    "async-timeout==4.0.2",
    "attrs==22.2.0",
    "autopep8==1.6.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.11.1",
    "bidict==0.22.0",
    "black==22.8.0",
    "cachelib==0.6.0",
    "cachetools==5.2.0",
    "camera>=1.3.0",
    "certifi==2021.10.8",
    "charset-normalizer==2.0.12",
    "click==8.1.0",
    "colorama==0.4.5",
    "colour==0.1.5",
    "commonmark==0.9.1",
    "cycler==0.11.0",
    "decorator==5.1.1",
    "dill==0.3.5.1",
    "docopt==0.6.2",
    "dominate==2.6.0",
    "executing==0.8.3",
    "flask==2.1.0",
    "flask-bootstrap==3.3.7.1",
    "flask-session==0.4.0",
    "flask-socketio==5.2.0",
    "flatbuffers==22.11.23",
    "fonttools==4.33.2",
    "frozenlist==1.3.3",
    "gast==0.4.0",
    "glcontext==2.3.6",
    "google-auth==2.14.1",
    "google-auth-oauthlib==0.4.6",
    "google-pasta==0.2.0",
    "grpcio==1.50.0",
    "h5py==3.7.0",
    "idna==3.3",
    "ipython==8.2.0",
    "isort==5.10.1",
    "isosurfaces==0.1.0",
    "itsdangerous==2.1.2",
    "jedi==0.18.1",
    "jinja2==3.1.1",
    "joblib==1.2.0",
    "keras==2.11.0",
    "keyboard==0.13.5",
    "kiwisolver==1.4.2",
    "lazy-object-proxy==1.7.1",
    "libclang==14.0.6",
    "lxml==4.9.1",
    "manimpango==0.4.1",
    "mapbox-earcut==1.0.0",
    "markdown==3.4.1",
    "markupsafe==2.1.1",
    "matplotlib==3.5.1",
    "matplotlib-inline==0.1.3",
    "mccabe==0.7.0",
    "moderngl==5.6.4",
    "moderngl-window==2.4.1",
    "mouseinfo==0.1.3",
    "mpmath==1.2.1",
    "multidict==6.0.4",
    "multipledispatch==0.6.0",
    "mypy-extensions==0.4.3",
    "networkx==3.0",
    "numpy==1.22.3",
    "oauthlib==3.2.0",
    "openai==0.27.1",
    "opencv-python==4.6.0.66",
    "opt-einsum==3.3.0",
    "packaging==21.3",
    "pandas==1.4.1",
    "parso==0.8.3",
    "pathspec==0.10.1",
    "pickleshare==0.7.5",
    "pillow==9.1.0",
    "pipreqs==0.4.11",
    "platformdirs==2.5.2",
    "praw==7.6.0",
    "prawcore==2.3.0",
    "prompt-toolkit==3.0.29",
    "protobuf==3.19.6",
    "psutil>=7.1.3",
    "pure-eval==0.2.2",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pyautogui==0.9.53",
    "pycodestyle==2.8.0",
    "pydirectinput==1.0.4",
    "pydub==0.25.1",
    "pygame==2.1.2",
    "pygetwindow==0.0.9",
    "pyglet==1.5.23",
    "pygments==2.12.0",
    "pylint==2.14.4",
    "pymem>=1.14.0",
    "pymsgbox==1.0.9",
    "pyopengl==3.1.6",
    "pyparsing==3.0.8",
    "pyperclip==1.8.2",
    "pyrect==0.2.0",
    "pyrr==0.10.3",
    "pyscreeze==0.1.28",
    "python-dateutil==2.8.2",
    "python-engineio==4.3.3",
    "python-socketio==5.7.1",
    "pytweening==1.0.4",
    "pytz==2022.1",
    "pywin32==305",
    "pyyaml==6.0",
    "redis>=5.0.1",
    "requests==2.27.1",
    "requests-oauthlib==1.3.1",
    "rich==12.2.0",
    "rsa==4.9",
    "scikit-learn==1.1.3",
    "scipy==1.8.0",
    "screeninfo==0.8",
    "six==1.16.0",
    "skia-pathops==0.7.2",
    "soupsieve==2.3.2.post1",
    "stack-data==0.2.0",
    "svgelements==1.6.13",
    "sympy==1.10.1",
    "tensorboard==2.11.0",
    "tensorboard-data-server==0.6.1",
    "tensorboard-plugin-wit==1.8.1",
    "tensorflow==2.11.0",
    "tensorflow-estimator==2.11.0",
    "tensorflow-intel==2.11.0",
    "tensorflow-io-gcs-filesystem==0.28.0",
    "termcolor==2.1.1",
    "threadpoolctl==3.1.0",
    "toml==0.10.2",
    "tomli==2.0.1",
    "tomlkit==0.11.1",
    "tqdm==4.64.0",
    "traitlets==5.1.1",
    "tweepy==4.10.0",
    "typing-extensions==4.4.0",
    "update-checker==0.18.0",
    "urllib3==1.26.9",
    "validators==0.18.2",
    "vgamepad==0.0.8",
    "visitor==0.1.3",
    "wcwidth==0.2.5",
    "websocket-client==1.3.3",
    "werkzeug==2.1.0",
    "whisper==1.1.10",
    "wrapt==1.14.1",
    "yarg==0.1.9",
    "yarl==1.8.2",
]
